changed port and cap version

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -3,7 +3,7 @@ upstream unicorn {
 }
 
 server {
-  listen 80 default deferred;
+  listen 12334 deferred;
   # server_name example.com;
   root /home/deployer/apps/busa/current/public;
 
