--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,4 +1,4 @@
-upstream unicorn {
+upstream unicorn_busa {
   server unix:/tmp/unicorn.busa.sock fail_timeout=0;
 }
 
@@ -13,12 +13,12 @@ server {
     add_header Cache-Control public;
   }
 
-  try_files $uri/index.html $uri @unicorn;
-  location @unicorn {
+  try_files $uri/index.html $uri @unicorn_busa;
+  location @unicorn_busa {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $http_host;
     proxy_redirect off;
-    proxy_pass http://unicorn;
+    proxy_pass http://unicorn_busa;
   }
 
   error_page 500 502 503 504 /500.html;
